# performance-coach-platform

./: .gitignore  README.md
backend/: create_db.py  performance_coach.db  pyproject.toml
backend/api/routers/: athlete.py  health.py
backend/api/services/: athlete_profile.py  database_service.py  performance.py
backend/app/: main.py
backend/database/: database.py  models.py
backend/schemas/: athlete.py
docs/: LEARNING_PATH.md
